--- a/css/sections.css
+++ b/css/sections.css
@@ -424,6 +424,7 @@ ul {
 }
 
 .logo {
+    transition: var(--transition);
     font-size: 1.8rem;
     font-weight: 800;
     font-family: var(--font-heading);
@@ -435,6 +436,7 @@ ul {
 }
 
 .tlou-moth {
+    transition: var(--transition);
     width: 38px;
     height: 19px;
     color: var(--text-muted);
@@ -449,6 +451,7 @@ ul {
 }
 
 .firefly-logo {
+    transition: var(--transition);
     width: 32px;
     height: 24px;
     color: #eab308 !important; /* Yellow/Gold */
@@ -464,6 +467,7 @@ ul {
 }
 
 .tlou-wolf {
+    transition: var(--transition);
     width: 32px;
     height: 32px;
     color: #74876b !important; /* Premium tactical WLF military moss green */
